--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,7 +72,8 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope>
+		<!--	<scope>test</scope> -->
+		<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
