that was naive of me. backend was far from over

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,6 +55,31 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- JWT (JSON Web Token) -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+		<!-- Optional: OAuth2 client support -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+		<!-- PostgreSQL Driver -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 
 		<!-- Test dependencies -->
 		<dependency>
@@ -69,12 +94,13 @@
 			</exclusions>
 		</dependency>
 
-		<dependency>
+		<!--	<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-		<!--	<scope>test</scope> -->
+	<scope>test</scope> 
 		<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
+
 
 	</dependencies>
 
