--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,12 +22,17 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
 # ===============================
-# =  DATABASE (OPTIONAL)
+# =  DATABASE CONFIGURATION
 # ===============================
-# For now, we\u2019ll use in-memory structures (TreeSet + HashMap)
-# But if you add a database later, uncomment and configure these:
-# spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
-# spring.datasource.username=postgres
-# spring.datasource.password=yourpassword
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
+spring.datasource.username=postgres
+spring.datasource.password=tfws.wow///POP()
+
+# ===============================
+# =  JPA / HIBERNATE CONFIGURATION
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.datasource.driver-class-name=org.postgresql.Driver
