--- a/frontend/task-prioritizer-ui/package.json
+++ b/frontend/task-prioritizer-ui/package.json
@@ -16,9 +16,10 @@
     "@mui/material": "^7.3.4",
     "axios": "^1.13.1",
     "dayjs": "^1.11.18",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
